--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/MOMOHOLICS/CSS/style.css">
 </head>
 
 <body>
@@ -480,6 +480,6 @@
 
   </section>
 </body>
-<script src="script.js"></script>
+<script src="/MOMOHOLICS/JS/script.js"></script>
 
 </html>
