--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           </div>
         </div>
         <div class="home-img">
-          <img src="momomo.jpg" align="right">
+          <img src="/MOMOHOLICS/image/momomo.jpg" align="right">
         </div>
       </div>
     </div>
@@ -309,7 +309,7 @@
 
       <div class="box-container">
         <div class="box reveal">
-          <img src="steam.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/steam.jpg" alt="" />
           <h3>Steam Momo</h3>
           <p>
             Soft, slightly chewy outer dough with a juicy and flavorful filling
@@ -322,7 +322,7 @@
             <span class="close">&times;</span>
             <div class="img-place">
               <div class="hangs">
-                <img src="Momo_4.jpg" alt="My website" />
+                <img src="/MOMOHOLICS/image/Momo_4.jpg" alt="My website" />
                 <div class="item-info">
                   <form method="post" class="fbox">
                     <h3>Add this item to you cart:</h3>
@@ -373,13 +373,13 @@
         </div>
 
         <div class="box reveal">
-          <img src="fried.png" alt="" />
+          <img src="/MOMOHOLICS/image/fried.png" alt="" />
           <h3>Fried Momo</h3>
           <p>Crispy, golden-brown outer layer with a crunchy texture.</p>
           <a href="#" class="btn">Add to cart</a>
         </div>
         <div class="box reveal">
-          <img src="kothey.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/kothey.jpg" alt="" />
           <h3>Kothey Momo</h3>
           <p>
             Crispy and golden on one side, soft and juicy on the other. The
@@ -389,7 +389,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="chilli.png" alt="" />
+          <img src="/MOMOHOLICS/image/chilli.png" alt="" />
           <h3>Chilli Momo</h3>
           <p>
             Spicy, tangy, and saucy version of momo, bursting with bold flavors.
@@ -398,7 +398,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="openm.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/openm.jpg" alt="" />
           <h3>Open Momo</h3>
           <p>
             Flower like dumplings, consists juicy filling, rich seasonings, and
@@ -408,7 +408,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="tandoori.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/tandoori.jpg" alt="" />
           <h3>Tandoori Momo</h3>
           <p>
             A fusion of momo and tandoori chicken, with a delicious charred,
@@ -418,7 +418,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="jholmomo.jpeg" alt="" />
+          <img src="/MOMOHOLICS/image/jholmomo.jpeg" alt="" />
           <h3>Jhol Momo</h3>
           <p>
             Warms your day with spicy, tangy, and slightly creamy soup (jhol).
@@ -427,7 +427,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="green-momo.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/green-momo.jpg" alt="" />
           <h3>Green Momo</h3>
           <p>
             Momo with spinach-infused dough and nourished with a vibrant and a
@@ -437,7 +437,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="buckwheat.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/buckwheat.jpg" alt="" />
           <h3>Buckwheat Momo</h3>
           <p>
             A fibrous alternative with a nutty, earthy, and slightly bitter
@@ -447,7 +447,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="sadekomomo.png" alt="" />
+          <img src="/MOMOHOLICS/image/sadekomomo.png" alt="" />
           <h3>Sadeko Momo</h3>
           <p>
             A spicy, tangy, and flavorful Nepali-style momo tossed in a mix of
@@ -457,7 +457,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="chocomomo.jpg" alt="" />
+          <img src="/MOMOHOLICS/image/chocomomo.jpg" alt="" />
           <h3>Chocolate Momo</h3>
           <p>
             A delightful and sweet twist on the traditional momo, where the
@@ -467,7 +467,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="thukpamomo.png" alt="" />
+          <img src="/MOMOHOLICS/image/thukpamomo.png" alt="" />
           <h3>Thukpa(Soup) Momo</h3>
           <p>
             A flavorful, spicy noodle soup, creating a comforting and hearty
