--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="home-img">
-          <img src="/MOMOHOLICS/image/momomo.jpg" align="right">
+          <img src="/MOMOHOLICS/image/momomo.jpg" right >
         </div>
       </div>
     </div>
