--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/MOMOHOLICS/CSS/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 795px)" href="/MOMOHOLICS/CSS/phone.css">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 795px)" href="CSS/phone.css">
 </head>
 
 <body>
@@ -299,7 +299,8 @@
           </div>
         </div>
         <div class="home-img">
-          <img src="/MOMOHOLICS/image/momomo.jpg" right >
+          <div class="home-momo"></div>
+
         </div>
       </div>
     </div>
@@ -310,7 +311,7 @@
 
       <div class="box-container">
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/steam.jpg" alt="" />
+          <img src="image/steam.jpg" alt="" />
           <h3>Steam Momo</h3>
           <p>
             Soft, slightly chewy outer dough with a juicy and flavorful filling
@@ -323,7 +324,7 @@
             <span class="close">&times;</span>
             <div class="img-place">
               <div class="hangs">
-                <img src="/MOMOHOLICS/image/Momo_4.jpg" alt="My website" />
+                <img src="image/Momo_4.jpg" alt="My website" />
                 <div class="item-info">
                   <form method="post" class="fbox">
                     <h3>Add this item to you cart:</h3>
@@ -374,13 +375,13 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/fried.png" alt="" />
+          <img src="image/fried.png" alt="" />
           <h3>Fried Momo</h3>
           <p>Crispy, golden-brown outer layer with a crunchy texture.</p>
           <a href="#" class="btn">Add to cart</a>
         </div>
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/kothey.jpg" alt="" />
+          <img src="image/kothey.jpg" alt="" />
           <h3>Kothey Momo</h3>
           <p>
             Crispy and golden on one side, soft and juicy on the other. The
@@ -390,7 +391,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/chilli.png" alt="" />
+          <img src="image/chilli.png" alt="" />
           <h3>Chilli Momo</h3>
           <p>
             Spicy, tangy, and saucy version of momo, bursting with bold flavors.
@@ -399,7 +400,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/openm.jpg" alt="" />
+          <img src="image/openm.jpg" alt="" />
           <h3>Open Momo</h3>
           <p>
             Flower like dumplings, consists juicy filling, rich seasonings, and
@@ -409,7 +410,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/tandoori.jpg" alt="" />
+          <img src="image/tandoori.jpg" alt="" />
           <h3>Tandoori Momo</h3>
           <p>
             A fusion of momo and tandoori chicken, with a delicious charred,
@@ -419,7 +420,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/jholmomo.jpeg" alt="" />
+          <img src="image/jholmomo.jpeg" alt="" />
           <h3>Jhol Momo</h3>
           <p>
             Warms your day with spicy, tangy, and slightly creamy soup (jhol).
@@ -428,7 +429,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/green-momo.jpg" alt="" />
+          <img src="image/green-momo.jpg" alt="" />
           <h3>Green Momo</h3>
           <p>
             Momo with spinach-infused dough and nourished with a vibrant and a
@@ -438,7 +439,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/buckwheat.jpg" alt="" />
+          <img src="image/buckwheat.jpg" alt="" />
           <h3>Buckwheat Momo</h3>
           <p>
             A fibrous alternative with a nutty, earthy, and slightly bitter
@@ -448,7 +449,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/sadekomomo.png" alt="" />
+          <img src="image/sadekomomo.png" alt="" />
           <h3>Sadeko Momo</h3>
           <p>
             A spicy, tangy, and flavorful Nepali-style momo tossed in a mix of
@@ -458,7 +459,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/chocomomo.jpg" alt="" />
+          <img src="image/chocomomo.jpg" alt="" />
           <h3>Chocolate Momo</h3>
           <p>
             A delightful and sweet twist on the traditional momo, where the
@@ -468,7 +469,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="/MOMOHOLICS/image/thukpamomo.png" alt="" />
+          <img src="image/thukpamomo.png" alt="" />
           <h3>Thukpa(Soup) Momo</h3>
           <p>
             A flavorful, spicy noodle soup, creating a comforting and hearty
@@ -481,6 +482,6 @@
 
   </section>
 </body>
-<script src="/MOMOHOLICS/JS/script.js"></script>
+<script src="JS/script.js"></script>
 
 </html>
