--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momoholics</title>
     <link rel="icon" href="momologo.png" />
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 <nav id="navbar" class="navbar">
@@ -65,7 +65,7 @@
 
       <div class="box-container">
         <div class="box reveal">
-          <img src="steam.jpg" alt="" />
+          <img src="image/steam.jpg" alt="" />
           <h3>Steam Momo</h3>
           <p>
             Soft, slightly chewy outer dough with a juicy and flavorful filling
@@ -78,7 +78,7 @@
             <span class="close">&times;</span>
             <div class="img-place">
               <div class="hangs">
-                <img src="Momo_4.jpg" alt="My website" />
+                <img src="image/Momo_4.jpg" alt="My website" />
                 <div class="item-info">
                   <form method="post" class="fbox">
                       <h3>Add this item to you cart:</h3>
@@ -153,13 +153,13 @@
         </div>
 
         <div class="box reveal">
-          <img src="fried.png" alt="" />
+          <img src="image/fried.png" alt="" />
           <h3>Fried Momo</h3>
           <p>Crispy, golden-brown outer layer with a crunchy texture.</p>
           <a href="#" class="btn">Add to cart</a>
         </div>
         <div class="box reveal">
-          <img src="kothey.jpg" alt="" />
+          <img src="image/kothey.jpg" alt="" />
           <h3>Kothey Momo</h3>
           <p>
             Crispy and golden on one side, soft and juicy on the other. The
@@ -169,7 +169,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="chilli.png" alt="" />
+          <img src="image/chilli.png" alt="" />
           <h3>Chilli Momo</h3>
           <p>
             Spicy, tangy, and saucy version of momo, bursting with bold flavors.
@@ -178,7 +178,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="openm.jpg" alt="" />
+          <img src="image/openm.jpg" alt="" />
           <h3>Open Momo</h3>
           <p>
             Flower like dumplings, consists juicy filling, rich seasonings, and
@@ -188,7 +188,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="tandoori.jpg" alt="" />
+          <img src="image/tandoori.jpg" alt="" />
           <h3>Tandoori Momo</h3>
           <p>
             A fusion of momo and tandoori chicken, with a delicious charred,
@@ -198,7 +198,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="jholmomo.jpeg" alt="" />
+          <img src="image/jholmomo.jpeg" alt="" />
           <h3>Jhol Momo</h3>
           <p>
             Warms your day with spicy, tangy, and slightly creamy soup (jhol).
@@ -207,7 +207,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="green-momo.jpg" alt="" />
+          <img src="image/green-momo.jpg" alt="" />
           <h3>Green Momo</h3>
           <p>
             Momo with spinach-infused dough and nourished with a vibrant and a
@@ -217,7 +217,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="buckwheat.jpg" alt="" />
+          <img src="image/buckwheat.jpg" alt="" />
           <h3>Buckwheat Momo</h3>
           <p>
             A fibrous alternative with a nutty, earthy, and slightly bitter
@@ -227,7 +227,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="sadekomomo.png" alt="" />
+          <img src="image/sadekomomo.png" alt="" />
           <h3>Sadeko Momo</h3>
           <p>
             A spicy, tangy, and flavorful Nepali-style momo tossed in a mix of
@@ -237,7 +237,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="chocomomo.jpg" alt="" />
+          <img src="image/chocomomo.jpg" alt="" />
           <h3>Chocolate Momo</h3>
           <p>
             A delightful and sweet twist on the traditional momo, where the
@@ -247,7 +247,7 @@
         </div>
 
         <div class="box reveal">
-          <img src="thukpamomo.png" alt="" />
+          <img src="image/thukpamomo.png" alt="" />
           <h3>Thukpa(Soup) Momo</h3>
           <p>
             A flavorful, spicy noodle soup, creating a comforting and hearty
