background and some minor changes

--- a/new.html
+++ b/new.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-    <div class="main">
       <nav>
         <div class="logo">
           <text>MOMOHOLICS</text
@@ -234,13 +233,14 @@
             </ul>
         </div>
       </nav>
-      <div class="info">
+      <div class="info" >
         <div class="bg">
-            <div class="slogan">
+            <div class="slogan" id="home">
                 <h1>
                     Flavour that wraps around your heart!❤
                 </h1>
-                <div></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque officiis nihil maiores quae facere eius praesentium esse, asperiores eos modi.</p>
+                <button class="btn">place order</button>
             </div>
         </div>
         <!-- <div class="serve">
@@ -274,10 +274,9 @@
                         <style data-made-with="vivus-instant">.rYLlcuba_0{stroke-dasharray:29 31;stroke-dashoffset:30;animation:rYLlcuba_draw 2000ms ease 0ms forwards;}.rYLlcuba_1{stroke-dasharray:54 56;stroke-dashoffset:55;animation:rYLlcuba_draw 2000ms ease 0ms forwards;}.rYLlcuba_2{stroke-dasharray:2432 2434;stroke-dashoffset:2433;animation:rYLlcuba_draw 2000ms ease 0ms forwards;}@keyframes rYLlcuba_draw{100%{stroke-dashoffset:0;}}@keyframes rYLlcuba_fade{0%{stroke-opacity:1;}93.54838709677419%{stroke-opacity:1;}100%{stroke-opacity:0;}}</style></svg>
                 </div>
                 <p class="dealp"></p>
-            </div>
-        </div> -->
+            </div> -->
+        <!-- </div> -->
       </div>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
