--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-          <link rel="icon" href="image/momologo.png" />
-
+    <title>Momoholics</title>
+          <link rel="icon" href="/image/momologo.png" />
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
