--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-      <nav>
+      <nav class="navigation">
         <div class="logo">
           <text>MOMOHOLICS</text
           ><svg
@@ -222,7 +222,7 @@
                     <a href="#menu">Menu</a>
                 </li>
                 <li>
-                    <a href="#login">Login</a>
+                    <a href="/login page/login.html">Login</a>
                 </li>
                 <li>
                     <a href="#cart" class="main-cart">Cart<span><svg id="i-cart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
